<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/privacy_txt_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/privacy_policy"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/privacy_txt_view2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/privacy_policy2"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/privacy_txt_view3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/privacy_policy3"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/privacy_txt_view4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/privacy_policy4"
            android:layout_marginTop="5dp"/>


    </LinearLayout>



</androidx.drawerlayout.widget.DrawerLayout>